==> MrKaiKai/ESP8266/oled/main/oled.c <==
//////////////////////////////////////////////////////////////////////////////////	 
//本程序只供学习使用，未经作者许可，不得用于其它任何用途
//中景园电子
//店铺地址：http://shop73023976.taobao.com/?spm=2013.1.0.0.M4PqC2
//
//  文 件 名   : main.c
//  版 本 号   : v2.0
//  作    者   : Evk123
//  生成日期   : 2014-0101
//  最近修改   :
//  功能描述   : 0.69寸OLED 接口演示例程(STM32F103ZE系列IIC)
//              说明:
//              ----------------------------------------------------------------
//              GND   电源地
//              VCC   接5V或3.3v电源
//              SCL   接PB13（SCL）
//              SDA   接PB15（SDA）
//              RES   接PB11 如果是用4针iic接口这个脚可以不接
//              ----------------------------------------------------------------
//Copyright(C) 中景园电子2014/3/16
//All rights reserved
//////////////////////////////////////////////////////////////////////////////////
#include "myiic.h"
#include "driver/i2c.h"
#include "oled.h"
#include "stdlib.h"
#include "oledfont.h"  	 
//OLED的显存
//存放格式如下.
//[0]0 1 2 3 ... 127	
//[1]0 1 2 3 ... 127	
//[2]0 1 2 3 ... 127	
//[3]0 1 2 3 ... 127	
//[4]0 1 2 3 ... 127	
//[5]0 1 2 3 ... 127	
//[6]0 1 2 3 ... 127	
//[7]0 1 2 3 ... 127 			   

/**
 * 向oled写命令
 * @param[in]   command
 * @retval
 *              - ESP_OK
 * @par         修改日志
 *               Ver0.0.1:
 XinC_Guo, 2018/07/18, 初始化版本\n
 *               Ver0.0.2:
 hx-zsj, 2018/08/07, 统一编程风格\n
 */

int oled_write_cmd(uint8_t command)
{
	//注释参考sht30之i2c教程
	int ret;
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	ret = i2c_master_start(cmd);
	ret = i2c_master_write_byte(cmd, OLED_WRITE_ADDR | WRITE_BIT, ACK_CHECK_EN);
	ret = i2c_master_write_byte(cmd, WRITE_CMD, ACK_CHECK_EN);
	ret = i2c_master_write_byte(cmd, command, ACK_CHECK_EN);
	ret = i2c_master_stop(cmd);
	ret = i2c_master_cmd_begin(I2C_OLED_MASTER_NUM, cmd,
			100 / portTICK_RATE_MS);
	i2c_cmd_link_delete(cmd);
	return ret;
}

/**
 * 向oled写数据
 * @param[in]   data
 * @retval
 *              - ESP_OK
 * @par         修改日志
 *               Ver0.0.1:
 XinC_Guo, 2018/07/18, 初始化版本\n
 */
int oled_write_data(uint8_t data)
{
	//注释参考sht30之i2c教程
	int ret;
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	ret = i2c_master_start(cmd);
	ret = i2c_master_write_byte(cmd, OLED_WRITE_ADDR | WRITE_BIT, ACK_CHECK_EN);
	ret = i2c_master_write_byte(cmd, WRITE_DATA, ACK_CHECK_EN);
	ret = i2c_master_write_byte(cmd, data, ACK_CHECK_EN);
	ret = i2c_master_stop(cmd);
	ret = i2c_master_cmd_begin(I2C_OLED_MASTER_NUM, cmd,
			100 / portTICK_RATE_MS);
	i2c_cmd_link_delete(cmd);

	return ret;
}

/**
 * 向oled写长数据
 * @param[in]   data   要写入的数据
 * @param[in]   len     数据长度
 * @retval
 *              - ESP_OK
 * @par         修改日志
 *               Ver0.0.1:
 XinC_Guo, 2018/07/18, 初始化版本\n
 */
int oled_write_long_data(uint8_t *data, uint16_t len)
{
	//注释参考sht30之i2c教程
	int ret;
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	ret = i2c_master_start(cmd);
	ret = i2c_master_write_byte(cmd, OLED_WRITE_ADDR | WRITE_BIT, ACK_CHECK_EN);
	ret = i2c_master_write_byte(cmd, WRITE_DATA, ACK_CHECK_EN);
	ret = i2c_master_write(cmd, data, len, ACK_CHECK_EN);
	ret = i2c_master_stop(cmd);
	ret = i2c_master_cmd_begin(I2C_OLED_MASTER_NUM, cmd,
			10000 / portTICK_RATE_MS);
	i2c_cmd_link_delete(cmd);
	if (ret != ESP_OK)
	{
		return ret;
	}
	return ret;
}
void OLED_WR_Byte(unsigned dat, unsigned cmd)
{
	if (cmd)
	{
		oled_write_data(dat);
	}
	else
	{
		oled_write_cmd(dat);
	}

}

/********************************************
 // fill_Picture
 ********************************************/
void fill_picture(unsigned char fill_Data)
{
	unsigned char m, n;
	for (m = 0; m < 8; m++)
	{
		OLED_WR_Byte(0xb0 + m, 0);		//page0-page1
		OLED_WR_Byte(0x00, 0);		//low column start address
		OLED_WR_Byte(0x10, 0);		//high column start address
		for (n = 0; n < 128; n++)
		{
			OLED_WR_Byte(fill_Data, 1);
		}
	}
}

/***********************Delay****************************************/
void Delay_50ms(unsigned int Del_50ms)
{
	unsigned int m;
	for (; Del_50ms > 0; Del_50ms--)
		for (m = 6245; m > 0; m--)
			;
}

void Delay_1ms(unsigned int Del_1ms)
{
	unsigned char j;
	while (Del_1ms--)
	{
		for (j = 0; j < 123; j++)
			;
	}
}

//坐标设置

void OLED_Set_Pos(unsigned char x, unsigned char y)
{
	OLED_WR_Byte(0xb0 + y, OLED_CMD);
	OLED_WR_Byte(((x & 0xf0) >> 4) | 0x10, OLED_CMD);
	OLED_WR_Byte((x & 0x0f), OLED_CMD);
}
//开启OLED显示
void OLED_Display_On(void)
{
	OLED_WR_Byte(0X8D, OLED_CMD);  //SET DCDC命令
	OLED_WR_Byte(0X14, OLED_CMD);  //DCDC ON
	OLED_WR_Byte(0XAF, OLED_CMD);  //DISPLAY ON
}
//关闭OLED显示
void OLED_Display_Off(void)
{
	OLED_WR_Byte(0X8D, OLED_CMD);  //SET DCDC命令
	OLED_WR_Byte(0X10, OLED_CMD);  //DCDC OFF
	OLED_WR_Byte(0XAE, OLED_CMD);  //DISPLAY OFF
}
//清屏函数,清完屏,整个屏幕是黑色的!和没点亮一样!!!
void OLED_Clear(void)
{
	uint8_t i, n;
	for (i = 0; i < 8; i++)
	{
		OLED_WR_Byte(0xb0 + i, OLED_CMD);    //设置页地址（0~7）
		OLED_WR_Byte(0x00, OLED_CMD);      //设置显示位置—列低地址
		OLED_WR_Byte(0x10, OLED_CMD);      //设置显示位置—列高地址
		for (n = 0; n < 128; n++)
			OLED_WR_Byte(0, OLED_DATA);
	} //更新显示
}
void OLED_On(void)
{
	uint8_t i, n;
	for (i = 0; i < 8; i++)
	{
		OLED_WR_Byte(0xb0 + i, OLED_CMD);    //设置页地址（0~7）
		OLED_WR_Byte(0x00, OLED_CMD);      //设置显示位置—列低地址
		OLED_WR_Byte(0x10, OLED_CMD);      //设置显示位置—列高地址
		for (n = 0; n < 128; n++)
			OLED_WR_Byte(1, OLED_DATA);
	} //更新显示
}
//在指定位置显示一个字符,包括部分字符
//x:0~127
//y:0~63
//mode:0,反白显示;1,正常显示
//size:选择字体 16/12
void OLED_ShowChar(uint8_t x, uint8_t y, uint8_t chr, uint8_t size)
{
	unsigned char c = 0, i = 0, Nom;
	c = chr - ' '; //得到偏移后的值
	if (x > Max_Column - 1)
	{
		x = 0;
		y = y + 2;
	}
	if (size == 16)
	{
		for (Nom = 0; Nom < 95; Nom++)
		{
			if (F8X16[Nom].Index1[0] == chr)
			{
				OLED_Set_Pos(x, y);
				for (i = 0; i < 8; i++)
					OLED_WR_Byte(F8X16[Nom].Msk1[i], OLED_DATA);
				OLED_Set_Pos(x, y + 1);
				for (i = 0; i < 8; i++)
					OLED_WR_Byte(F8X16[Nom].Msk1[i + 8], OLED_DATA);
			}
		}
	}
	else
	{
		OLED_Set_Pos(x, y + 1);
		for (i = 0; i < 6; i++)
			OLED_WR_Byte(F6x8[c][i], OLED_DATA);

	}
}
//m^n函数
uint32_t oled_pow(uint8_t m, uint8_t n)
{
	uint32_t result = 1;
	while (n--)
		result *= m;
	return result;
}
//显示2个数字
//x,y :起点坐标
//len :数字的位数
//size:字体大小
//mode:模式	0,填充模式;1,叠加模式
//num:数值(0~4294967295);
void OLED_ShowNum(uint8_t x, uint8_t y, uint32_t num, uint8_t len,
		uint8_t size2)
{
	uint8_t t, temp;
	uint8_t enshow = 0;
	for (t = 0; t < len; t++)
	{
		temp = (num / oled_pow(10, len - t - 1)) % 10;
		if (enshow == 0 && t < (len - 1))
		{
			if (temp == 0)
			{
				OLED_ShowChar(x + (size2 / 2) * t, y, ' ', size2);
				continue;
			}
			else
				enshow = 1;
		}
		OLED_ShowChar(x + (size2 / 2) * t, y, temp + '0', size2);
	}
}
/******************************************************
 ****函数名：
 ****功  能：本函数不在主函数中调用
 ****输入值：
 ****返回值：无
 ****日  期：
 ******************************************************/
void OLED_ShowNum_F(uint8_t x, uint8_t y, uint32_t num, uint8_t len,
		uint8_t size2)
{
	uint8_t t, temp;
	uint8_t enshow = 0;
	for (t = 0; t < len; t++)
	{
		temp = (num / oled_pow(10, len - t - 1)) % 10;
		if (enshow == 0 && t < (len - 1))
		{
			if (temp == 0)
			{
				OLED_ShowChar(x + (size2 / 2) * t, y, '0', size2);
				continue;
			}
			else
				enshow = 1;
		}
		OLED_ShowChar(x + (size2 / 2) * t, y, temp + '0', size2);
	}
}
/******************************************************
 ****函数名：
 ****功  能：显示小数
 ****输入值：IntLen整数长度,FloatLen小数长度
 ****返回值：无
 ****日  期：2017-03-04
 ******************************************************/
void OLED_ShowFloatNum(uint8_t x, uint8_t y, float num, uint8_t IntLen,
		uint8_t FloatLen, uint8_t size)
{
	float Num = num - (float) ((uint16_t) num);
	uint16_t u = (uint16_t) ((float) Num * (float) oled_pow(10, FloatLen))
			% oled_pow(10, FloatLen);
	OLED_ShowNum(x, y, (uint16_t) num, IntLen, size);
	OLED_ShowChar(x + IntLen * (size / 2), y, '.', size);
	OLED_ShowNum_F(x + (IntLen + 1) * (size / 2), y, u, FloatLen, size);
}
/******************************************/
//函数名:
//功  能:显示实数
//输入值:
//返回值:
//日  期:
/*******************************************/
void OLED_Float(uint8_t x, uint8_t y, float num, uint8_t IntLen,
		uint8_t FloatLen, uint8_t size)
{
	float Num;
	uint16_t u;
	if (num < 0)
	{
		OLED_ShowChar(x, y, '-', size);
		num = -num;
	}
	else
	{
		OLED_ShowChar(x, y, ' ', size);
		num = num;
	}
	Num = num - (float) ((uint16_t) num);
	u = (uint16_t) ((float) Num * (float) oled_pow(10, FloatLen))
			% oled_pow(10, FloatLen);
	OLED_ShowNum(x + (size / 2), y, (uint16_t) num, IntLen, size);
	OLED_ShowChar(x + (size / 2) + IntLen * (size / 2), y, '.', size);
	OLED_ShowNum_F(x + (size / 2) + (IntLen + 1) * (size / 2), y, u, FloatLen,
			size);
}

//显示一个字符号串
void OLED_ShowString(uint8_t x, uint8_t y, uint8_t *chr, uint8_t Char_Size)
{
	unsigned char j = 0;
	while (chr[j] != '\0')
	{
		OLED_ShowChar(x, y, chr[j], Char_Size);
		x += 8;
		if (x > 120)
		{
			x = 0;
			y += 2;
		}
		j++;
	}
}
uint8_t OLED_ShowCH(uint8_t x, uint8_t y, uint8_t *cn)
{
	uint8_t t, adder = 0, wordNum;
	if (y > 64)
		return 0;
	if (x > 128)
		return 0;

	while (*cn)	 //在C语言中字符串结束以‘\0’结尾
	{
		for (wordNum = 0; wordNum < 95; wordNum++)
		{
			//--查询要写的字在字库中的位置--//
			if ((CN16CHAR[wordNum].Index[0] == *cn)
					&& (CN16CHAR[wordNum].Index[1] == *(cn + 1)))
			{
				OLED_Set_Pos(x, y);
				for (t = 0; t < 16; t++)
				{
					OLED_WR_Byte(CN16CHAR[wordNum].Msk[t], OLED_DATA);
					adder += 1;
				}
				OLED_Set_Pos(x, y + 1);
				for (t = 0; t < 16; t++)
				{
					OLED_WR_Byte(CN16CHAR[wordNum].Msk[16 + t], OLED_DATA);
					adder += 1;
				}
				x += 16;
			}	 //if查到字结束
			if ((F8X16[wordNum].Index1[0] == *cn))
			{
				OLED_Set_Pos(x, y);
				for (t = 0; t < 8; t++)
					OLED_WR_Byte(F8X16[wordNum].Msk1[t], OLED_DATA);
				OLED_Set_Pos(x, y + 1);
				for (t = 0; t < 8; t++)
					OLED_WR_Byte(F8X16[wordNum].Msk1[t + 8], OLED_DATA);
				x += 8;
			}
		} //for查字结束
		cn += 1;
	}	//while结束
	return 1;
}
/***********功能描述：显示显示BMP图片128×64起始点坐标(x,y),x的范围0～127，y为页的范围0～7*****************/
void OLED_DrawBMP(unsigned char x0, unsigned char y0, unsigned char x1,
		unsigned char y1, unsigned char BMP[])
{
	unsigned int j = 0;
	unsigned char x, y;

	if (y1 % 8 == 0)
		y = y1 / 8;
	else
		y = y1 / 8 + 1;
	for (y = y0; y < y1; y++)
	{
		OLED_Set_Pos(x0, y);
		for (x = x0; x < x1; x++)
		{
			OLED_WR_Byte(BMP[j++], OLED_DATA);
		}
	}
}

//初始化SSD1306
void OLED_Init(void)
{
	OLED_Clear();
	OLED_WR_Byte(0xAE, OLED_CMD);	  //--display off
	OLED_WR_Byte(0x00, OLED_CMD);	  //---set low column address
	OLED_WR_Byte(0x10, OLED_CMD);	  //---set high column address
	OLED_WR_Byte(0x40, OLED_CMD);	  //--set start line address
	OLED_WR_Byte(0xB0, OLED_CMD);	  //--set page address
	OLED_WR_Byte(0x81, OLED_CMD); // contract control
	OLED_WR_Byte(0xFF, OLED_CMD); //--128
	OLED_WR_Byte(0xA1, OLED_CMD); //set segment remap
	OLED_WR_Byte(0xA6, OLED_CMD); //--normal / reverse
	OLED_WR_Byte(0xA8, OLED_CMD); //--set multiplex ratio(1 to 64)
	OLED_WR_Byte(0x3F, OLED_CMD); //--1/32 duty
	OLED_WR_Byte(0xC8, OLED_CMD); //Com scan direction
	OLED_WR_Byte(0xD3, OLED_CMD); //-set display offset
	OLED_WR_Byte(0x00, OLED_CMD); //

	OLED_WR_Byte(0xD5, OLED_CMD); //set osc division
	OLED_WR_Byte(0x80, OLED_CMD); //

	OLED_WR_Byte(0xD8, OLED_CMD); //set area color mode off
	OLED_WR_Byte(0x05, OLED_CMD); //

	OLED_WR_Byte(0xD9, OLED_CMD); //Set Pre-Charge Period
	OLED_WR_Byte(0xF1, OLED_CMD); //

	OLED_WR_Byte(0xDA, OLED_CMD); //set com pin configuartion
	OLED_WR_Byte(0x12, OLED_CMD); //

	OLED_WR_Byte(0xDB, OLED_CMD); //set Vcomh
	OLED_WR_Byte(0x30, OLED_CMD); //

	OLED_WR_Byte(0x8D, OLED_CMD); //set charge pump enable
	OLED_WR_Byte(0x14, OLED_CMD); //

	OLED_WR_Byte(0xAF, OLED_CMD); //--turn on oled panel
}
